syntax = "proto3";

option go_package="definitions/generated";

package internalgrpc;

service MarketplaceInternal {
  rpc AddProductsInStock(AddProductsRequest) returns (Empty) {}
  rpc RegisterNewProduct(ProductToRegister) returns (ProductId) {}
}

message Empty {
}

message ProductId {
    int32 id = 1;
}

message ProductToAdd {
    int32 id = 1;
    int32 amount = 2;
}

message ProductToRegister {
    string name = 1;
    string price = 2;
    int32 left_in_stock = 3;
    int32 provider_id = 4;
    string category = 5;
}

message AddProductsRequest {
    repeated ProductToAdd products = 1;
}
